--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -36,7 +36,8 @@
     }
 
     @include respond-to(mobiles) {
-      width: 280px;
+      display: inline-block;
+      width: calc(100% - 100px);
       font-size: 1rem;
       line-height: 1.5;
     }
@@ -89,7 +90,8 @@
     }
 
     @include respond-to(mobiles) {
-      width: 280px;
+      display: inline-block;
+      width: calc(100% - 100px);
     }
   }
 }
@@ -155,6 +157,10 @@
     @include respond-to(portables) {
       display: block;
     }
+  }
+
+  a {
+    color: transparent;
   }
 }
 
